# SentriKat

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUDIT-agent-scanning.md  AUDIT_REPORT.md  AUTHENTICATION_FIX_README.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  COLLEAGUE_INSTRUCTIONS.md  COMPREHENSIVE_TESTING_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  ENTERPRISE_ANALYSIS.md  ENTERPRISE_READINESS.md  FINAL_AUDIT_SUMMARY.md  FIRST_TIME_SETUP_PLAN.md  FIX-HANDOFF-sentrikat-web.md  FULL_AUDIT_AND_SAAS_MIGRATION.md  INSTALLATION_GUIDE.md  LDAP_CONFIGURATION_GUIDE.md  LDAP_RBAC_IMPLEMENTATION_GUIDE.md  LICENSE.md  LOGGING_GUIDE.md  README.md  SAAS_AUDIT_AND_PLAN.md  SECURITY.md  SENTRIKAT_HANDBOOK.md  SETTINGS_AND_ENV_GUIDE.md  SETUP_GUIDE.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  UPDATE_GUIDE.md  add_cpe_columns.py  audit_databases.py  audit_system.py  check_ldap_data.sh  check_user.py  (+43 more)
.github/: dependabot.yml
agents/: README.md  sentrikat-agent-linux.sh  sentrikat-agent-macos.sh  sentrikat-agent-windows.ps1
app/: __init__.py  agent_api.py  api_docs.py  audit.py  audit_api.py  auth.py  authz.py  cache_utils.py  cisa_sync.py  compliance_reports.py  cpe_api.py  cpe_dictionary.py  cpe_mapping.py  cpe_mappings.py  cve_description_parser.py  cve_known_products.py  digest_emails.py  email_alerts.py  email_normalizer.py  email_provider.py  email_service.py  encryption.py  environment.py  epss_sync.py  error_utils.py  exploit_enrichment.py  filters.py  gdpr_api.py  health_checks.py  incident_integrations.py  integration_connectors.py  integrations_api.py  integrations_models.py  internal_api.py  issue_trackers.py  jira_integration.py  kb_sync.py  ldap_api.py  ldap_group_api.py  ldap_manager.py  (+45 more)
certs/: README.md
docs/: ADMIN_GUIDE.md  API.md  BRIEFING_SENTRIKAT_WEB_SESSION.md  CONFIGURATION.md  CUSTOMER_TECHNICAL_REVIEW.md  DISASTER_RECOVERY.md  INSTALLATION.md  MULTI_EXPERT_AUDIT.md  OWASP-ASVS.md  PRE_LAUNCH_AUDIT_AND_TESTING_PLAN.md  README.md  SAAS_INTEGRATION_SPEC.md  SAAS_USER_GUIDE.md  SCALE-TESTING-ROADMAP.md  SESSION-HANDOFF-2026-05-06.md  SESSION-HANDOFF-2026-05-07.md  SESSION-HANDOFF-END-OF-DAY-2026-05-06.md  USER_GUIDE.md  WINDOWS_TEST_GUIDE.md  investigation-CVE-2026-2441-missing.md
k8s/: app-deployment.yaml  app-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  pdb.yaml  postgres-service.yaml  postgres-statefulset.yaml  secret.yaml
ldap/: README.md  bootstrap.ldif
migrations/: README  README.md  add_failed_login_tracking.sql  add_password_expiry_and_2fa.sql  add_shared_views.py  create_ldap_tables.sql  create_user_organizations.sql  env.py
nginx/: README.md  docker-entrypoint.sh  nginx-ssl.conf.template  nginx.conf  nginx.conf.template
packaging/sentrikat-scan/: .gitignore  LICENSE  README.md  RELEASING.md  build.sh  pyproject.toml
scripts/: audit_inline_scripts.py  backup_cron.sh  backup_database.sh  download_vendor_assets.sh  enable_rls.sql  post_deploy_bootstrap.sh  seed_e2e_dev.py  sentrikat-scan.py  update.ps1  update.sh
sentrikat-scan/: README.md  pyproject.toml  sentrikat_scan.py
static/: manifest.json
templates/: admin.html  base.html  dashboard.html  setup.html
tests/: TESTING_CHECKLIST.md  __init__.py  conftest.py  setup-test-env.sh  test_agent_inventory.py  test_alert_recipient_fallback.py  test_alerts_settings_layout.py  test_api_endpoints.py  test_audit_fixes_post_ea_week1.py  test_auth.py  test_authz_coverage.py  test_check_product_limit_saas.py  test_container_dependency_scanning.py  test_cpe_assignment_failures_f5.py  test_csrf_wiring.py  test_customer_journey.py  test_cve_matching_critical_paths.py  test_cve_matching_f6_f8.py  test_e2e_detection.py  test_email_alerts.py  test_export_import.py  test_filters.py  test_hard_delete.py  test_licensing.py  (+36 more)
(+144 files in other folders)
