[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sentrikat-scan"
version = "1.0.0"
description = "Lightweight dependency vulnerability scanner for SentriKat"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

# Zero runtime dependencies — stdlib only
dependencies = []

[project.scripts]
sentrikat-scan = "sentrikat_scan:main"

[tool.setuptools]
py-modules = ["sentrikat_scan"]
